--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,30 @@
-.image {
-   position: relative;
-   width: 100%; /* for IE 6 */
-}
-
 html {
   background: url(img/maaret.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+
+  font-family: 'Indie Flower', cursive;
+  color: white;
+  font-size: 24;
 }
 
-img {
-  width: 100%;
-}
+
 
 h1 {
-   font-family: 'Indie Flower', cursive;
+
    font-size: 150;
-   position: absolute;
-   top: -100px;
    text-align: center;
    width: 100%;
    color: white;
 }
+
+span {
+  font-size: 30;
+  }
+
+a {
+    font-size: 24;
+    color: white;
+    }
