--- a/img/icomoon/style.css
+++ b/img/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:    url('fonts/icomoon.eot?lpba50');
-    src:    url('fonts/icomoon.eot?lpba50#iefix') format('embedded-opentype'),
-        url('fonts/icomoon.ttf?lpba50') format('truetype'),
-        url('fonts/icomoon.woff?lpba50') format('woff'),
-        url('fonts/icomoon.svg?lpba50#icomoon') format('svg');
+    src:    url('fonts/icomoon.eot?k2oiz5');
+    src:    url('fonts/icomoon.eot?k2oiz5#iefix') format('embedded-opentype'),
+        url('fonts/icomoon.ttf?k2oiz5') format('truetype'),
+        url('fonts/icomoon.woff?k2oiz5') format('woff'),
+        url('fonts/icomoon.svg?k2oiz5#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -62,6 +62,9 @@
 }
 .icon-skype:before {
     content: "\f17e";
+}
+.icon-slideshare:before {
+    content: "\f1e7";
 }
 .icon-creative-commons:before {
     content: "\f25e";
