--- a/img/icomoon/style.css
+++ b/img/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:    url('fonts/icomoon.eot?k2oiz5');
-    src:    url('fonts/icomoon.eot?k2oiz5#iefix') format('embedded-opentype'),
-        url('fonts/icomoon.ttf?k2oiz5') format('truetype'),
-        url('fonts/icomoon.woff?k2oiz5') format('woff'),
-        url('fonts/icomoon.svg?k2oiz5#icomoon') format('svg');
+    src:    url('fonts/icomoon.eot?a879mm');
+    src:    url('fonts/icomoon.eot?a879mm#iefix') format('embedded-opentype'),
+        url('fonts/icomoon.ttf?a879mm') format('truetype'),
+        url('fonts/icomoon.woff?a879mm') format('woff'),
+        url('fonts/icomoon.svg?a879mm#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -57,6 +57,12 @@
 .icon-google-plus-square:before {
     content: "\f0d4";
 }
+.icon-envelope:before {
+    content: "\f0e0";
+}
+.icon-ticket:before {
+    content: "\f145";
+}
 .icon-youtube:before {
     content: "\f167";
 }
@@ -68,5 +74,8 @@
 }
 .icon-creative-commons:before {
     content: "\f25e";
+}
+.icon-lanyrd:before {
+    content: "\e900";
 }
 
