--- a/styles_page.css
+++ b/styles_page.css
@@ -3,43 +3,54 @@ img {
 }
 
 html {
+  background: url(img/maaretp-with-audience.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
    font-family: 'Indie Flower', cursive;
-   font-size: 14;
+   font-size: 26;
    text-align: left;
    width: 100%;
-   color: black;
+   color: white;
 }
 
 h1 {
    font-family: 'Indie Flower', cursive;
-   font-size: 24;
+   font-size: 40;
    text-align: center;
    width: 100%;
    color: black;
 }
 
 h2 {
-   font-family: 'Indie Flower', cursive;
-   font-size: 18;
-   text-align: left;
+   font-size: 30;
+   text-align: center;
    width: 100%;
-   color: blue;
+   color: white;
 }
+
+
+span {
+  font-size: 26;
+  color: white;
+  }
+
+a {
+    font-size: 26;
+    color: white;
+    }
+
+b {
+  font-size: 26;
+  color: pink;
+    }
 
 table {
-   font-family: 'Indie Flower', cursive;
-   font-size: 14;
-   width: 80%;
-   color: black;
-}
-
-
-th {
-   font-style: bold;
-   text-align: center;
-}
-
-
-td {
-   text-align: left;
-}
+    text-align: center;
+    background: rgb(0, 0, 0); /* fallback color */
+    background: rgba(0, 0, 0, 0.7);
+    padding: 10px;
+    font-size: 26
+        }
