--- a/styles_page.css
+++ b/styles_page.css
@@ -9,8 +9,8 @@ html {
   -o-background-size: cover;
   background-size: cover;
 
-   font-family: 'Indie Flower', cursive;
-   font-size: 26;
+   font-family: 'Roboto';
+   font-size: 22;
    text-align: left;
    width: 100%;
    color: white;
@@ -25,6 +25,7 @@ h1 {
 }
 
 h2 {
+  font-family: 'Indie Flower', cursive;
    font-size: 30;
    text-align: center;
    width: 100%;
@@ -33,17 +34,14 @@ h2 {
 
 
 span {
-  font-size: 26;
   color: white;
   }
 
 a {
-    font-size: 26;
     color: white;
     }
 
 b {
-  font-size: 26;
   color: pink;
     }
 
