--- a/new_styles.css
+++ b/new_styles.css
@@ -1,17 +1,28 @@
 html {
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Lato', cursive;
   font-size: 20;
 }
 
 
 
 h1 {
-    font-family: 'Indie Flower', cursive;
-    font-size: 100;
+    font-family: 'Lobster', cursive;
+    font-size: 112;
     text-align: center;
-    width: 100%;
-    color: black;
+    color: #000000;
 }
+
+h4 {
+    font-family: 'Lobster', cursive;
+    color: #000000;
+}
+
+h3 {
+    font-family: 'Lobster', cursive;
+    font-size: 80;
+    color: #ffffff;
+}
+
 
 table {
     width:100%"
@@ -20,5 +31,88 @@ table {
     padding: 0px;
         }
 
-hr {
-}
+.mainnav ul {
+  list-style: none;
+  margin: 0 20px 40px 20px;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end; }
+
+@media all and (min-width: 53.125em) {
+  .mainnav ul {
+    border-bottom: 4px solid #FF0000; }
+  }
+
+.mainnav li {
+          margin: 0 10px; }
+
+.mainnav a {
+  text-transform: uppercase;
+  text-decoration: none;
+  display: block;
+  color: #000000;
+  padding: 10px 0; }
+
+.mainnav a:hover {
+  border-bottom: 4px solid #000000;
+  margin-bottom: -4px; }
+
+.mainnav a.selected, .mainnav a.selected:hover {
+  color: #000000;
+  border-bottom: 4px solid #000000;
+  margin-bottom: -4px; }
+
+
+.main-footer {
+  background-color: #FF0000;
+  color: #ffffff;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-gap: 20px; }
+
+.main-footer ul {
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+
+.main-footer p {
+  margin: 0 0 1em 0; }
+
+.main-footer a:link,
+.main-footer a:visited {
+  color: #ffffff;
+  font-weight: bold;
+  text-decoration: none; }
+
+.main-footer a:hover {
+  color: #000000; }
+
+.main-footer .contact,
+.footer-nav,
+.footer-elsewhere {
+  grid-column: 1 / -1; }
+
+@media all and (min-width: 53.125em) {
+  .main-footer .contact,
+  .main-footer .footer-nav,
+  .main-footer .footer-elsewhere {
+    width: 25%;
+    margin-right: 2%;
+    display: inline-block;
+    vertical-align: top; }
+  .main-footer .contact {
+    width: 35%; }
+  @supports (display: grid) {
+    .main-footer .contact {
+      width: auto;
+      grid-column: 1 / 6;
+      padding-right: 20px;
+      border-right: 4px dashed #fff; }
+    .main-footer .footer-nav {
+      width: auto;
+      grid-column: 6 / 9; }
+    .main-footer .footer-elsewhere {
+      width: auto;
+      grid-column: 9 / -1; } } }
