--- a/style2.css
+++ b/style2.css
@@ -5,8 +5,17 @@ html {
   padding: 0;
 }
 
+h1 {
+  font-family: 'Shadows Into Light', cursive;
+  font-size: 30px;
+  margin-bottom: -2px;
+}
+
+
 h2 {
   font-family: 'Shadows Into Light', cursive;
   font-size: 20px;
   margin-bottom: -2px;
 }
+
+
