--- a/style.css
+++ b/style.css
@@ -86,11 +86,16 @@ h3 {
     font-size: 20px;
 }
 
-.social, .social a {
+.social a {
     color: white;
     font-size: 30px;
     padding-top: 10px;
 }
+
+.social a:hover {
+    color: #ff6b81;
+}
+
 
 .support {
     padding-top: 30px;
