--- a/style.css
+++ b/style.css
@@ -17,10 +17,10 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 45px;
+    padding-top: 35px;
     padding-left: 8%;
     padding-right: 8%;
-}
+    transform: translateY(-20%);}
 
 .logo{
     color: white;
@@ -82,14 +82,14 @@ h1 {
 
 h3 {
     color: white;
-    margin: 20px  0px  20px;
+    margin: 10px  0px  10px;
     font-size: 20px;
 }
 
 .social a {
     color: white;
     font-size: 30px;
-    padding-top: 10px;
+    padding-top: 20px;
 }
 
 .social a:hover {
@@ -98,7 +98,7 @@ h3 {
 
 
 .support {
-    padding-top: 30px;
+    padding-top: 20px;
 }
 
 .about {
@@ -279,6 +279,10 @@ h3 {
     text-transform: capitalize;
     margin-bottom: 10px;
     padding-top: 10px;
+}
+
+.contact p {
+    margin-bottom: 10px;
 }
 
 .upcoming ul li {
