--- a/style.css
+++ b/style.css
@@ -297,8 +297,12 @@ h3 {
 
 .upcoming a {
     color: white;
-    text-decoration: none;
+    text-decoration: underline;
     text-transform: capitalize;
+}
+
+.upcoming a:hover {
+    color: gold;
 }
 
 .contents2 {
