--- a/style.css
+++ b/style.css
@@ -326,3 +326,108 @@ h3 {
     font-size: 16px;
     text-align: center;
 }
+
+.header {
+    color: #ff6b81;
+    text-align: center;
+}
+
+.talks {
+    width: 100%;
+    padding: 100px  0px;
+    background-color: white;
+}
+
+.box2 {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.box2 img {
+    border-radius: 10%;
+    width: 340px;
+    height: auto;
+    padding-right: 0px;
+}
+
+.card2 {
+    min-width: 380px;
+    height: 320px;
+    width: 380px;
+    padding: 20px 20px;
+    background: #191919;
+    border-radius: 20px;
+    margin: 15px;
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+}
+
+.card2 p {
+    font-size: 14px;
+    color: white;
+    display: block;
+    margin: 25px 0px;
+}
+
+.timecircle {
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 50%;
+    font-size: 10px;
+    color: #fff;
+    text-align: center;
+    background: #ff6b81;
+  }
+
+.status {
+    width: 20%;
+    color: white;
+    position: relative;
+    left: 80%;
+    top: -25px;
+    font-size: 12px;
+    font-style: italic;
+}
+
+.talktitle {
+    color: #ff6b81;
+    font-size: 20px;
+    margin-bottom: 15px;
+    margin-top: 15px;
+}
+
+.talktype {
+    font-size: 14px;
+    color: gold;
+    margin-bottom: 6px;
+    margin-top: 6px;
+    text-transform: uppercase;
+}
+
+.wherewhenwhere {
+    font-size: 12px;
+    color: white;
+    margin-bottom: 4px;
+}
+
+.card2 i {
+    font-size: 20px;
+    color: #ff6b81;
+    display: block;
+    margin: 30px  0px;
+    position: relative;
+    display: inline;
+}
+
+.card2 a {
+    text-decoration: none;
+}
+
+
+.card2text {
+    color: white;
+    margin-bottom: 10px;
+}
