--- a/style.css
+++ b/style.css
@@ -414,6 +414,13 @@ h3 {
     margin-bottom: 4px;
 }
 
+.talktheme {
+    font-size: 12px;
+    color: lightskyblue;
+    margin-top: 20px;
+    margin-bottom: 4px;
+}
+
 .card2 i {
     font-size: 20px;
     color: #ff6b81;
