--- a/style.css
+++ b/style.css
@@ -472,3 +472,30 @@ h3 {
 a:visited {
     color: white;
 }
+
+.quicklinks {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 30%;
+    padding-right: 30%;
+    padding-bottom: 20px;
+}
+
+.quicklinks ul li {
+    list-style-type: none;
+    display: inline-block;
+    padding: 10px  25px;
+}
+
+.quicklinks ul li a {
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+    text-transform: capitalize;
+}
+
+.quicklinks ul li a:hover {
+    color: #ff6b81;
+    transition: .4s;
+}
