--- a/quote.css
+++ b/quote.css
@@ -12,7 +12,7 @@ body {
   /* Blockquote main style */
   .blockquote {
       position: relative;
-      font-family: 'Barlow Condensed', sans-serif;
+      font-family: 'Josefin Sans', sans-serif;
       max-width: 620px;
       margin: 80px auto;
       align-self: center;
@@ -20,9 +20,9 @@ body {
   
   /* Blockquote header */
   .blockquote h1 {
-      font-family: 'Roboto';
+    font-family: 'Josefin Sans', sans-serif;
       position: relative; /* for pseudos */
-      color: #E7569F;
+      color: #ff6b81;
       font-size: 2.8rem;
       font-weight: normal;
       line-height: 1;
@@ -37,7 +37,7 @@ body {
   .blockquote h1:after {
       content:"";
       position: absolute;
-      border: 2px solid #E7569F;
+      border: 2px solid  #ff6b81;;
       border-radius: 0 50px 0 0;
       width: 60px;
       height: 60px;
