--- a/style.css
+++ b/style.css
@@ -559,6 +559,12 @@ a:visited {
     text-align: center;
 }
 
+.light p {
+    color: black;
+    font-size: 20px;
+    text-align: center;
+}
+
 .light ul li {
     font-size: 20px;
     text-align: center;
