--- a/style.css
+++ b/style.css
@@ -556,7 +556,7 @@ a:visited {
     width: 980px; 
     text-transform: capitalize;
     margin-bottom: 30px auto;
-    text-align: center;
+    text-align: right;
 }
 
 .light p {
