--- a/style.css
+++ b/style.css
@@ -587,8 +587,7 @@ a:visited {
 }
 
 .bullet li {
-    padding-left: 30%;
-    text-align: left;
+    text-align: center;
     list-style-type: square;
     display: inline-block;
     padding: 10px  25px;
