--- a/style.css
+++ b/style.css
@@ -525,9 +525,9 @@ a:visited {
 
 .dark ul li {
     font-size: 20px;
-    text-align: center;
+    text-align: left;
     color: white;
-    list-style-type: square;
+    list-style-type: none;
     display: list-item;
     padding-bottom: 10px;
     padding-top: 10px;
@@ -571,7 +571,7 @@ a:visited {
     text-align: center;
     color: black;
     display: list-item;
-    list-style-type: square;
+    list-style-type: none;
     padding-bottom: 10px;
     padding-top: 10px;
 }
