--- a/style.css
+++ b/style.css
@@ -564,6 +564,7 @@ a:visited {
     font-size: 20px;
     width: 980px;
     text-align: center;
+    margin-bottom: 30px auto;
 }
 
 .light ul li {
