--- a/style.css
+++ b/style.css
@@ -576,7 +576,7 @@ a:visited {
     text-align: center;
     color: black;
     display: list-item;
-    list-style-type: none;
+    list-style-type: square;
     padding-bottom: 10px;
     padding-top: 10px;
 }
