--- a/style.css
+++ b/style.css
@@ -559,7 +559,7 @@ a:visited {
     margin-bottom: 30px auto;
 }
 
-.light h3 {
+.light div {
     color: black;
     margin: 50px  0px  50px;
     font-size: 18px;
