--- a/style.css
+++ b/style.css
@@ -602,6 +602,7 @@ a:visited {
     border-radius: 0%;
     width: auto;
     height: 200px;
+    text-alight: center;
     padding-right: 20px;
     padding-bottom: 30px;
 }
