--- a/style.css
+++ b/style.css
@@ -602,8 +602,8 @@ a:visited {
     padding-left: 200px;
     border-radius: 0%;
     width: auto;
-    height: 200px;
-    text-align: center;
+    height: 300px;
+    text-align: left;
     padding-right: 20px;
     padding-bottom: 30px;
 }
